--- a/src/assessts/css/footer.css
+++ b/src/assessts/css/footer.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 324px;
+    height: 450px;
     margin-top: 20px;
     padding: 40px 80px 20px 80px;
     gap: 40px;
@@ -75,6 +75,21 @@ h4{
     width: 238.89px;
     height: 30px;
 }
+.footer-container-bottom{
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    color: aliceblue;
+    padding-top: 100px;
+    padding-left: 300px;
+    line-height: 5px;
+}
+.footer-container-bottom p{
+    padding-left: 50px;
+}
+hr{
+    color: white;
+}
 
 @media screen and (max-width:1440px) {
     .footer{
@@ -96,7 +111,7 @@ h4{
     }
     .footer{
         width: 768px;
-        height: auto;
+        height: 700px;
     }
     .left{
         width: 413px;
@@ -105,6 +120,14 @@ h4{
     .right{
         width: 413px;
         margin-left: -50px;
+    }
+    .footer-container-bottom{
+        width: 768px;
+        padding-top: 300px;
+        padding-left: 100px;
+    }
+    .footer-container-bottom p{
+        padding-left: 50px;
     }
 }
 @media screen and (max-width:376px) {
@@ -120,7 +143,7 @@ h4{
        height: auto;
     }
     .footer{
-        height: 715px;
+        height: 900px;
         width: 375px;
     }
     .left{
@@ -135,5 +158,13 @@ h4{
     .right{
         width: 375px;
         margin-left: -150px;
+    }
+    .footer-container-bottom{
+        width: 768px;
+        padding-top: 550px;
+        padding-left: 30px;
+    }
+    .footer-container-bottom p{
+        padding-left: 50px;
     }
 }
